trunk/assets/css/style.css
/*
colours:
	#CDCAB9 grey
	#D6D3C4
	#DFDED4
	#432F21 brown
	#CA171B red

font-family: "Helvetica",Helvetica,Arial,sans-serif;
*/

.color1 {
	background-color: #CA171B; /* red */
}

.color2 {
	background-color: #432F21; /* brown */
}

.color3 {
	background-color: #DFDED4; /* lightest grey */
}

.color4 {
	background-color: #D6D3C4; /* medium grey */
}

.color5 {
	background-color: #CDCAB9; /* darkest grey */
}

.color6 {
	background-color: white;
}


body {
	margin: 0px;
	padding: 0px;
	font-family: Helvetica, Arial, clean, sans-serif;
	font-size: 0.85em	;
}

/* TOP TOP TOP TOP TOP TOP TOP TOP TOP TOP TOP TOP TOP TOP TOP TOP TOP TOP TOP TOP */
#top {
	height: 100px;
	position: relative;
	left: 0px;
	right: 0px;
	top: 0px;
}
#topwrapper {
	height: 100px;
	width: 992px;
	margin-left: auto;
	margin-right: auto;
}
#logo {
	height: 100px;
	width: 144px;
	margin-right: 2px;
	float: left;
}
#topinputbox {
	height: 70px;
	width: 844px;
	margin-left: 2px;
	position: relative;
	float: right;
}
#topinputcontainer {
	width: 600px;
	height: 30px;
	position: absolute;	
	left: 150px;
	bottom: 15px;
}
#filtersearchinput {
	width: 175px;
	height: 30px;
	border: 0px;
    padding: 0px;
	margin-right: 5px;
}
#filtersearchinput[type="text"] {
	font-size: 0.9em;
}
#locationsearchinput {
	width: 175px;
	height: 30px;
	border: 0px;
    padding: 0px;
	margin: 0px;
}
#locationsearchinput[type="text"] {
	font-size: 0.9em;
}
#searchsubmit {
    border: 0px;
    border-radius: 0px;
        -moz-border-radius: 0px;
	-webkit-border-radius: 0px;
    height: 30px;
    width: 65px;
    position: relative;
    top: 0px;
}
#searchsubmit[type="submit"] {
    font-size: 0.9em;
    background-color: #CDCAB9;
}
#buttonbox {
	height: 30px;
	width: 844px;
	margin-left: 2px;
	position: relative;
	float: right;	
}
#buttonbox button {
    width: 100px;
    height: 30px;
    float: left;
    border: 0px;
    padding: 0px;
    margin: 0px;
    border-radius: 0px;
    	-moz-border-radius: 0px;
	-webkit-border-radius: 0px;
    color: white;
    font-size: 0.85em;
}
#buttonbox button:hover {
	background-color: #CDCAB9;
}

#contentwrap {
	width: 1000px;
	overflow: hidden;
	margin-left: auto;
	margin-right: auto;
}

/* LEFTBAR LEFTBAR LEFTBAR LEFTBAR LEFTBAR LEFTBAR LEFTBAR LEFTBAR LEFTBAR LEFTBAR LEFTBAR LEFTBAR */
#leftbar {
	width: 144px;
	min-height: 572px; /* change this later to overflow */
	overflow: auto; /* see if this works */
	float: left;
	margin-left: 4px;
	margin-right: 2px;
	margin-top: 4px;
	margin-bottom: 4px;
}
.leftbarheader {
	width: 136px;
	height: 30px;
	border-bottom: 1px solid #DFDED4;
	margin-left: auto;
	margin-right: auto;
}
#leftbar h2 {
	text-align: center;
	font-size: 1.2em;
}
#leftbar ul li {
	list-style-type: none;
	margin-top: 1em;
	text-indent: -2em;
        padding: 0px;
	margin-top: 0px;
	margin-bottom: 0.25em;
	margin-left: 0px;
	margin-right: 0px;
}
#leftbar a {
	text-decoration: none;
}
#leftbar a:hover {
	text-decoration: underline;
}
#leftbar a:visited {
	color: blue;
}

/* BANNER BANNER BANNER BANNER BANNER BANNER BANNER BANNER BANNER BANNER BANNER BANNER */
#banner {
	width: 844px;
	height: 94px;
	float: right;
	margin-left: 2px;
	margin-right: 4px;
	margin-top: 4px;
	margin-bottom: 2px;
        display: table;
}
#bannerchild {
  	display: table-cell;
  	vertical-align: middle;
	text-align: center;  
}

/* MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP MAP */
#map-canvas {
	width: 474px;
	height: 474px;
	float: left;
	margin-left: 2px;
	margin-right: 2px;
	margin-top: 2px;
	margin-bottom: 4px;
        display: flex;
        justify-content: center; /* align horizontal */
        align-items: center; /* align vertical */
}
#resultpopup {
	width: 92%;
	height: 92%;
}

/* RESULTS RESULTS RESULTS RESULTS RESULTS RESULTS RESULTS RESULTS RESULTS RESULTS */
#sortbox {
	width: 366px;
	height: 18px;
	float: right;
	margin-left: 2px;
	margin-right: 4px;
	margin-top: 2px;
	margin-bottom: 0px;
}
#sortbox span{
    display:none;
}
#sortbox a {
	text-decoration: none;
	color: blue;
}
#sortbox a:hover {
	text-decoration: underline;
}
#sortbox a:visited {
	color: blue;
}
#typebox {
	width: 366px;
	min-height: 18px;
	float: right;
	margin-left: 2px;
	margin-right: 4px;
	margin-top: 0px;
	margin-bottom: 0px;
}
.filterbox {
        display: inline;
        margin-right: 5px;
}
.filterbox a{
	text-decoration: none;
	color: black;
}
#results {
	width: 366px;
	height: 401px;
	overflow: auto;
	float: right;
	margin-left: 2px;
	margin-right: 4px;
	margin-bottom: 0px;
        overflow-x: hidden;
}
#resultshome {
	width: 366px;
	height: 439px;
	display: table;
}
#resultshomechild {
  	display: table-cell;
  	vertical-align: middle;
	text-align: center;
}
.resultbox {
	width: 366px;
	height: 113px;
	position: relative;
}
.boxnumber {
	width: 57px;
	height: 53px;
	position: absolute;
	top: 0px;
	left: 0px;
}
.boxdistance {
	width: 57px;
	height: 52px;
	position: absolute;
	left: 0px;
	bottom: 0px;
	border-bottom: 1px solid #DFDED4;
}
.boxname {
	width: 309px;
	height: 35px;
	position: absolute;
	top: 0px;
	right: 0px;
}
.boxaddress {
	width: 309px;
	height: 35px;
	position: absolute;
	right: 0px;
	top: 35px;
}
.sportsavailable {
	width: 309px;
	height: 34px;
	border-bottom: 1px solid #DFDED4;
	position: absolute;
	right: 0px;
	bottom: 0px;
}
#pagesdirectory {
	width: 358px;
	height: 30px;
	padding: 4px;
	float: right;
	margin-right: 4px;
} /* PAGE DIRECTORY PAGE DIRECTORY PAGE DIRECTORY PAGE DIRECTORY PAGE DIRECTORY */
.pageselect {
	width: 30px;
	height: 30px;
	float: left;
	margin-left: 4px;
}
#firstpage {
	margin-left: 79px;
}
#previouspage {
}
#currentpage {
	width: 60px;
	height: 30px;
	float: left;
	margin-left: 4px;
}
#nextpage {
}
#lastpage {
	margin-right: 79px;
}

#firstpage a{
        display: none;
}
#previouspage a{
        display: none;
}
#nextpage a{
        display: none;
}
#lastpage a{
	display: none;
}

/* FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER */
#footer {
	width: 100%;
	height: 100px;
	display: table;
}
#footerchild {
  	display: table-cell;
  	vertical-align: middle;
	text-align: center;  	
}
#footerchild a {
	text-decoration: none;
	color: #432F21;
}
#footerchild a:hover {
	text-decoration: underline;
	color: #432F21;
}
#footerchild a:visited {
	text-decoration: none;
	color: #A4A4A4;
}

.otherpages {
	width: 992px;
	height: 572px;
	margin-top: 4px;	
}
.pagepurposewrap {
	width: 992px;
	height: 100px;
	background-color: white;
	text-align: center;
	display: flex;
    justify-content: center; /* align horizontal */
    align-items: center; /* align vertical */
}
.pagecontentwrap {
	width: 992px;
	height: 468px;
	margin-top: 4px;
	background-color: white;
	position: relative;
}
.pagecontent {
	width: 892px;
	height: 368px;
	position: absolute;
	margin: auto;
	bottom: 0;
	left: 0;	
	top: 0;
	right: 0;
}
.pagecontentleft {
	width: 421px;
	height: 368px;
	float: left;
	position: relative;
}
.pagecontentright {
	width: 421px;
	height: 368px;
	float: right;
	position: relative;
}

.formlabel {
	float: left;
	width: 100px;
	height: 30px;
	display: flex;
        align-items: center; /* align vertical */
	margin-bottom: 10px;
}
.formtextbox {
	float: left;
	width: 250px;
	height: 30px;
	margin-bottom: 10px;
	border: 1px solid #CDCAB9;
}
#contactform textarea {
	float: left;
	max-width: 250px;
	width: 250px;
	height: 150px;
	max-height: 200px;
	margin-bottom: 10px;
	border: 1px solid #CDCAB9;
}
.messages {
	width: 250px;
	float: left;
}
.messages input{
	border: 0px;
    border-radius: 0px;
        -moz-border-radius: 0px;
		-webkit-border-radius: 0px;
    height: 30px;
    width: 50px;
    position: relative;
    top: 0px;
    background-color: #CDCAB9;
    margin-right: 10px;
}
.messages input[type="submit"] {
	font-size: 0.85em;
}

.otherinfo textarea {
	float: left;
	max-width: 250px;
	width: 250px;
	height: 100px;
	max-height: 150px;
	margin-bottom: 10px;
	border: 1px solid #CDCAB9;
}
.otherinfo {
	width: 250px;
	float: left;
}
.otherinfo input{
	border: 0px;
    border-radius: 0px;
        -moz-border-radius: 0px;
	-webkit-border-radius: 0px;
    height: 30px;
    width: 50px;
    position: relative;
    top: 0px;
    background-color: #CDCAB9;
    margin-right: 10px;
}
.otherinfo input[type="submit"] {
	font-size: 0.85em;
}
#sportinput {
	float: left;
	height: 34px;
        width: 120px;    
	border: 1px solid #CDCAB9;
	margin-right: 10px;
        line-height: 20px;
        padding: 7px 0px 7px 0px;
}
#othersportsbox {
	float: left;
	width: 120px;
	height: 30px;
	border: 1px solid #CDCAB9;
        margin-bottom: 10px;
}

.pagecontentmiddle {
	width: 421px;
	height: 368px;
	float: right;
	position: relative;
}

#dbcontentwrap {
	width: 1200px;
	overflow: hidden;
	margin-left: auto;
	margin-right: auto;
}
#lefttable {
	width: 798px;
	min-height: 572px; /* change this later to overflow */
	overflow: auto; /* see if this works */
	float: left;
	position: relative;
	margin-top: 4px;
	margin-right: 2px;
}
#rightinput {
	width: 390px;
	min-height: 564px; /* change this later to overflow */
	overflow: auto; /* see if this works */
	float: right;
	position: relative;
	margin-top: 4px;
	margin-left: 2px;
	padding: 4px;
}
#headerholder {
    height: 30px;
    width: 390px;
}
.dbbuttons input{
	border: 0px;
    border-radius: 0px;
        -moz-border-radius: 0px;
		-webkit-border-radius: 0px;
    height: 30px;
    width: 50px;
    position: relative;
    top: 0px;
    background-color: #CDCAB9;
    margin-right: 10px;
}
.dbbuttons input[type="submit"] {
	font-size: 0.85em;
}
.heading {
	width: 100px;
	height: 34px;
        float: left;
}
.inputplaceholder{
        width: 290px;
	height: 34px;
        float: left;
}

